# cicd-best-practices

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: best-practices.md
src/: main.py
src/cicd_toolkit/: __init__.py  cli.py  rules.py  validator.py
templates/workflows/: reusable-python-ci.yml
tests/: test_rules.py  test_validator.py
