[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-toolkit"
version = "0.1.0"
description = "Linter and reference templates for secure, reliable CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Sawant" }]
keywords = ["cicd", "github-actions", "devops", "security", "linter"]
dependencies = ["click>=8.1", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7"]

[project.scripts]
cicd-lint = "cicd_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/abhisheksawant52/cicd-best-practices"
Issues = "https://github.com/abhisheksawant52/cicd-best-practices/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
